# Gahan-AI-Assignment

./: README.md
Gahan AI Assignment/ros2_training_ws/src/robot_bringup/: CMakeLists.txt  package.xml
Gahan AI Assignment/ros2_training_ws/src/robot_bringup/launch/: gazebo.launch.py
Gahan AI Assignment/ros2_training_ws/src/robot_description/: CMakeLists.txt  package.xml
Gahan AI Assignment/ros2_training_ws/src/robot_description/rviz/: robot.rviz
Gahan AI Assignment/ros2_training_ws/src/robot_description/urdf/: robot.urdf.xacro
Gahan AI Assignment/ros2_training_ws/src/robot_navigation/: package.xml
Gahan AI Assignment/ros2_training_ws/src/training_interfaces/: package.xml
Gahan AI Assignment/ros2_training_ws/src_Final/robot_navigation/: package.xml
Gahan AI Assignment/ros2_training_ws/src_Final/robot_navigation/config/: nav2_params.yaml  slam_params.yaml
Gahan AI Assignment/ros2_training_ws/src_Final/robot_navigation/rviz/: nav2.rviz
Gahan AI Assignment/ros2_training_ws/src_V2/robot_navigation/: CMakeLists.txt
Gahan AI Assignment/ros2_training_ws/src_V5/robot_bringup/: CMakeLists.txt
Gahan AI Assignment/ros2_training_ws/src_V6/robot_description/: CMakeLists.txt
Gahan AI Assignment/ros2_training_ws/src_V6/training/: package.xml
Gahan AI Assignment/ros2_training_ws/src_V6/training_interfaces/: CMakeLists.txt
ros2_ws/src/robot_description/urdf/: robot.urdf.xacro
ros2_ws/src/robot_navigation/launch/: slam.launch.py
ros2_ws/src/robot_navigation/maps/: map.pgm  map.yaml
ros2_ws/src/training/: setup.py
(+29 files in other folders)
